--- a/.bmi/infil_richards_1d/parameters.yaml
+++ b/.bmi/infil_richards_1d/parameters.yaml
@@ -375,17 +375,17 @@ type_of_soil_layer_0:
     type: choice
     default: sand
     choices:
-    - sand
-    - loamy_sand
-    - sandy_loam
-    - silty_loam
-    - loam
-    - sandy_clay_loam
-    - silty_clay_loam
-    - clay_loam
-    - sandy_clay
-    - silty_clay
-    - clay
+    - Sand
+    - Loamy Sand
+    - Sandy Loam
+    - Silty Loam
+    - Loam
+    - Sandy Clay Loam
+    - Silty Clay Loam
+    - Clay Loam
+    - Sandy Clay
+    - Silty Clay
+    - Clay
     units: '-'
 
 ---
@@ -720,17 +720,17 @@ type_of_soil_layer_1:
     type: choice
     default: sand
     choices:
-    - sand
-    - loamy_sand
-    - sandy_loam
-    - silty_loam
-    - loam
-    - sandy_clay_loam
-    - silty_clay_loam
-    - clay_loam
-    - sandy_clay
-    - silty_clay
-    - clay
+    - Sand
+    - Loamy Sand
+    - Sandy Loam
+    - Silty Loam
+    - Loam
+    - Sandy Clay Loam
+    - Silty Clay Loam
+    - Clay Loam
+    - Sandy Clay
+    - Silty Clay
+    - Clay
     units: '-'
 
 ---
@@ -1065,16 +1065,16 @@ type_of_soil_layer_2:
     type: choice
     default: sand
     choices:
-    - sand
-    - loamy_sand
-    - sandy_loam
-    - silty_loam
-    - loam
-    - sandy_clay_loam
-    - silty_clay_loam
-    - clay_loam
-    - sandy_clay
-    - silty_clay
-    - clay
+    - Sand
+    - Loamy Sand
+    - Sandy Loam
+    - Silty Loam
+    - Loam
+    - Sandy Clay Loam
+    - Silty Clay Loam
+    - Clay Loam
+    - Sandy Clay
+    - Silty Clay
+    - Clay
     units: '-'
 
